<resources>
    <string name="app_name">Recetitas Monk</string>
    <string name="logTxtCorreo">Correo</string>
    <string name="logTxtClave">Clave</string>
    <string name="logChkRecordar">Recordar Sesión</string>
    <string name="logBtnIniciar">Iniciar</string>
    <string name="logBtnSalir">Salir</string>
    <string name="logLblRegistrar">Registrate</string>
    <string name="logLblDerechos">Copy Right Recetitas Monk 2024 </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="itcLblNombreplato">"Nombre de la comida "</string>
    <string name="itcLbluser">"Creador de receta "</string>
    <string name="bieLblSaludo"> Bienvenid@ </string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    inicio sesion

    <string name="frgCfgLblBienvenida"> Bienvenido </string>
    <string name="frgCfgLbluse"> Usuario </string>
    <string name="frgCfgLblcampo"> Campo Obligatorio </string>
    <string name="frgCfgLblcontr"> Contraseña </string>
    <string name="frgCfgLblobli"> Campo Obligatorio </string>
    <string name="frgCfgLblRC"> Recordar Contraseña </string>
    <string name="frgCfgBtninises">" Iniciar Sesion "</string>
    <string name="frgCfgLblrg"> Registrate </string>
    <string name="frgCfgLblredes"> Redes Sociales </string>

    //inicio
    <string name="frgCfgLblinc"> Inicio </string>
    <string name="frgCfgLblrv"> Recetas más vistas </string>
    <string name="frgCfgLblrr"> Recetas Recientes </string>

    //user
    <string name="frgCfgLblperf"> Perfil de Usuario</string>
    <string name="frgCfgLblmisrece"> Mis Recetas </string>
    <string name="frgCfgLblfavo"> Mis Favoritos </string>
    <string name="frgCfgLblPdP"> Politica de Privacidad</string>
    <string name="frgCfgLbltyc"> Termino y condiciones </string>
    <string name="frgCfgLblCS"> Cerrar Sesion </string>

    //editarusu
    <string name="frmLblnomb"> Nombre </string>
    <string name="frmLblnom"> Nombre </string>
    <string name="frmLblapel"> Apellido </string>
    <string name="frmLblapes"> Apellido </string>
    <string name="frmLblelec"> Correo Electrónico </string>
    <string name="frmLblcorre"> Correo Electrónico</string>
    <string name="frmLblpasss"> Contraseña</string>
    <string name="frmLblcass"> Contraseña</string>
    <string name="frmBtned">" Editar "</string>
    <string name="frmBtnaplic">" Aplicar "</string>
    //categorias
    <string name="frgCfgLblcate"> Categorias </string>
    <string name="Txtcatex"> Categorias </string>

    //agregar receta
    <string name="frgCfgLblagr"> Agregar Receta</string>

    //Registro
    <string name="regTxtregtit"> Registro de Usuarios</string>
    <string name="regTextNombres">Nombres</string>
    <string name="regTextApelliP">Apellido Paterno</string>
    <string name="regTextApelliM">Apellido Materno</string>
    <string name="regTextDni">Numero de Documento</string>
    <string name="regTextCelular">Celular</string>
    <string name="regTextCorreo">Correo</string>
    <string name="regTextCorreoContra">Contraseña</string>
    <string name="regRbtMasculino">Masculino</string>
    <string name="regRbtFemenino">Femenino</string>
    <string name="regBtnRegistrar">Registrar</string>
    <string name="regBtnCancelar">Cancelar</string>
    <string name="frgCfgLblPreferencias">Cambia Idioma</string>
    <string name="frgCfgBtnGuardar">Guardar</string>
    <string name="frmBtnCerrarses">Cerrar Sesion</string>
    <string name="TxtOtro">Otros</string>
    <string name="frmBtnpubli">" Publicar "</string>
    <string name="regTxtgener">Género</string>

    <string name="agregar_rec">
Agregar Recetas
</string>
    <!-- strings.xml -->
    <string name="nombre_de_l">
Nombre de la Receta
</string>
    <string name="ingrediente">
Ingredientes
</string>
    <string name="preparacion">
Preparacion
</string>
    <string name="categoria">
Categoria
</string>
    <string name="departamento">
Departamento
</string>
    <!-- strings.xml -->
    <string name="label">
Pick an option
</string>
    <string-array name="categorias_array">
        <item>Desayuno</item>
        <item>Almuerzo</item>
        <item>Navideñas</item>
        <item>Ensaladas</item>
        <item>Bebidas</item>
        <item>Panes</item>
        <item>Comida para Niños</item>
        <item>Sopas</item>
        <item>Saludables</item>
        <item>Bocaditos</item>
    </string-array>
    <!-- Términos y Condiciones -->
    <string name="terms_conditions_title">Términos y Condiciones</string>
    <string name="terms_conditions">"         <![CDATA[         Bienvenido a Recetitas Monk. Al usar nuestra aplicación, aceptas cumplir con los siguientes términos y condiciones:         \n\n         1. Aceptación de los Términos         Al acceder y utilizar Recetitas Monk, aceptas estar sujeto a estos términos y condiciones. Si no estás de acuerdo con alguna parte de estos términos, no debes usar la aplicación.         \n\n         2. Uso de la Aplicación         - Registro: Debes registrarte para usar ciertas funcionalidades de la app. Proporciona información veraz y completa durante el registro.         - Contenido del Usuario: Eres responsable del contenido que subas. No debes subir contenido que sea ofensivo, ilegal o que infrinja derechos de terceros.         - Derechos de Uso: Esta aplicación permite a los usuarios compartir y subir sus propias recetas. Al hacerlo, los usuarios conceden a la aplicación el derecho de utilizar, modificar y distribuir las recetas con el propósito de operar y mejorar nuestros servicios.         \n\n         3. Privacidad         Nuestra política de privacidad explica cómo recopilamos, usamos y compartimos tu información personal. Al usar la app, aceptas nuestra política de privacidad.         \n\n         4. Propiedad Intelectual         Todo el contenido y software en la app es propiedad de Recetitas Monk o de sus licenciantes y está protegido por leyes de propiedad intelectual.         \n\n         5. Limitación de Responsabilidad         Recetitas Monk no será responsable de ningún daño indirecto, incidental, especial o consecuente que surja del uso de la aplicación.         \n\n         6. Modificaciones de los Términos         Recetitas Monk se reserva el derecho de modificar estos términos en cualquier momento. Te notificaremos sobre cualquier cambio material a través de la app.         \n\n         7. Ley Aplicable         Nos comprometemos a cumplir con la Ley 29733, Ley de Protección de Datos Personales, y su reglamento. Los datos personales que recopilemos serán tratados con estricta confidencialidad y solo serán utilizados para los fines específicos de nuestra aplicación.         Al registrarte y utilizar nuestros servicios, aceptas que tus datos personales sean recopilados, almacenados y utilizados de acuerdo con nuestra política de privacidad.         Nos comprometemos a seguir los lineamientos establecidos por la Ley 31315 para promover la seguridad alimentaria y nutricional.          \n\n         8. Contacto         Para cualquier pregunta sobre estos términos, puedes contactarnos al número 908611017.         ]]>     "</string>
    <string name="diplay_25_s">
Mis Recetas
</string>

    <string name="nombre_de_la">
Nombre de la receta
</string>
    <string name="autor">
Autor
</string>
    <string-array name="departamentos_array">
        <item>Amazonas</item>
        <item>Áncash</item>
        <item>Apurímac</item>
        <item>Arequipa</item>
        <item>Ayacucho</item>
        <item>Cajamarca</item>
        <item>Callao</item>
        <item>Cusco</item>
        <item>Huancavelica</item>
        <item>Huánuco</item>
        <item>Ica</item>
        <item>Junín</item>
        <item>La Libertad</item>
        <item>Lambayeque</item>
        <item>Lima</item>
        <item>Loreto</item>
        <item>Madre de Dios</item>
        <item>Moquegua</item>
        <item>Pasco</item>
        <item>Piura</item>
        <item>Puno</item>
        <item>San Martín</item>
        <item>Tacna</item>
        <item>Tumbes</item>
        <item>Ucayali</item>
    </string-array>

    //mostrar datos
    <string name="itcLblnombreUser">NombreUser</string>

</resources>