<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.misrecetas">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <RelativeLayout
            android:id="@+id/diplay_24_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/diplay_24_s"
            android:layout_marginTop="10dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/diplay_25_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/diplay_25_s"
                android:textAppearance="@style/diplay_25_s"
                android:textSize="29sp" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">


            <ImageView
                android:id="@+id/overlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/receta"
                android:layout_marginEnd="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/nombre_de_la"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_de_la"
                    android:textAppearance="@style/nombre_de_la"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/autor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autor"
                    android:textAppearance="@style/autor"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
